[JavaScriptCore] FTL buildfix for EFL platform. https://bugs.webkit.org/show_bug.cgi?id=133546

Reviewed by Darin Adler.

* ftl/FTLAbstractHeap.cpp:
(JSC::FTL::IndexedAbstractHeap::IndexedAbstractHeap):
* ftl/FTLLocation.cpp:
(JSC::FTL::Location::forStackmaps):
* ftl/FTLLowerDFGToLLVM.cpp:
(JSC::FTL::LowerDFGToLLVM::opposite):
* ftl/FTLOSRExitCompiler.cpp:
(JSC::FTL::compileStub):
* ftl/FTLStackMaps.cpp:
(JSC::FTL::StackMaps::Constant::dump):
* llvm/InitializeLLVMPOSIX.cpp:
(JSC::initializeLLVMPOSIX):


Canonical link: https://commits.webkit.org/152365@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170525 268f45cc-cd09-0410-ab3c-d52691b4dbfc